--- a/todolist/src/components/style.css
+++ b/todolist/src/components/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alkalami&family=Angkor&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 :root {
     --primary: #D81E5B;
     --light: #EEE;
@@ -11,12 +10,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Fira Sans", sans-serif;
+    font-family: 'Inter';
    }
    
    body {
-    background-color: var(--light-alt);
-    color: var(--light);
+    background: linear-gradient(0deg, rgba(5,36,62,1) 5%, rgba(18,83,170,1) 85%);
+    color:#05243E;
    }
    
    .container {
@@ -26,8 +25,8 @@
      display: flex;
      flex-direction: column;
      gap: 30px;
-     background-color: #53628b;
-     border-radius: 5px;
+     background-color:#fff;
+     border-radius: 15px;
 
    }
    
@@ -37,9 +36,15 @@
 
     .heading h1{
 
-      font-family: "Angkor", serif;
-      font-weight: 500;
+      font-family:'Inter';
+      font-weight: 800;
+      display: flex;
+      flex-direction: column;
 
+    }
+    .head{
+      font-weight: 500;
+      font-size: 25px;
     }
     
    .form{
@@ -50,31 +55,33 @@
      width: 85%;
      padding: 5px;
      border-radius: 5px 0px 0px 5px;
+     border: 1px solid gray;
+   }
+   .link:hover{
+    color: #131A26;
+   }
+   .link{
+    text-decoration: none;
+    font-family: 'Inter';
+    color: gray;
+   }
+   .list{
+    list-style: none;
    }
    .completed{
-    /* text-decoration: line-through rgb(210, 20, 20) ;
-    text-decoration-line: 40px; */
-    /* margin: 0px 45px; */
     width: 100px;
-
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
    }
-
-   .completed::after{
-    content: "";
-    position: absolute;
-    left: 0%;
-    right: 0;
-    top: 50%;
-    height: 2px; 
-    background-color: red;
-    width: 100%; 
-    margin: 0 auto;
-    transform: translateY(-50%);
-   }
+  
+  .underline{
+    text-decoration:underline;
+  }
+  .active{
+    text-decoration: none;
+  }
    
    .form button {
     border: none;
@@ -89,7 +96,6 @@
    .todo {
      padding: 10px;
      border-radius: 5px;
-     background-color: var(--dark);
      display: grid;
      grid-template-columns: 3fr 0.3fr;
      transition: 0.5s;
@@ -98,8 +104,12 @@
     justify-content: space-between;
     align-items: center;
    }
-
-   
+   .check:hover{
+    border-bottom: 4px solid #50DD8E;
+   }
+   .unCheck:hover{
+    border-bottom: 3px solid yellow;
+   }
    .checkbox{
      width: 20px;
      height: 20px;
@@ -107,15 +117,7 @@
      background-color: var(--light);
      transition: 0.4s;
    }
-   
-   .check-complete .checkbox{
-     background-color: var(--primary); 
-   }
-   
-   .check-complete .text{
-     text-decoration: line-through;
-   }
-   
+  
    .todolist{
     height: 216px;
     overflow: hidden;
@@ -133,9 +135,6 @@
     .box{
       width: 20px;
       height: 20px;
-      border-radius: 50%;
-      background-color: var(--light);
-      transition: 0.4s;
 
     }
    
@@ -145,11 +144,7 @@
      justify-content: center;
      align-items: center; 
    }
-
-   input{
-    outline: none;
-    border-radius: 5px;
-    border: none;
-   }
-
+.hide{
+  display: none;
+}
 
